--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
-    "typescript": "^5.0.2"
+    "@types/node": "^20.8.2",
+    "typescript": "^5.2.2"
   }
 }
